# docs/swagger.json
@@ -14,7 +14,7 @@
                 "tags": [
                     "health"
                 ],
-                "summary": "Liveness - determines if app is running",
+                "summary": "Determines if app is running",
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -30,7 +30,7 @@
                 "tags": [
                     "health"
                 ],
-                "summary": "Readiness - determines if app is ready to receive traffic",
+                "summary": "Determines if app is ready to receive traffic",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -49,7 +49,7 @@
                 "tags": [
                     "newsletter"
                 ],
-                "summary": "GetNewslettersByUserID - retrieve newsletter by creator's user ID",
+                "summary": "Retrieve newsletter by creator's user ID",
                 "parameters": [
                     {
                         "type": "string",
@@ -111,7 +111,7 @@
                 "tags": [
                     "newsletter"
                 ],
-                "summary": "Create - used to create new newsletter",
+                "summary": "Create new newsletter",
                 "parameters": [
                     {
                         "type": "string",
@@ -152,13 +152,16 @@
         },
         "/api/v1/newsletters/{newsletter_public_id}/subscriptions": {
             "post": {
+                "consumes": [
+                    "application/json"
+                ],
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "public subscription"
                 ],
-                "summary": "SubscribeToNewsletter - used to subscribe to newsletter by email",
+                "summary": "Used to subscribe to newsletter by email",
                 "parameters": [
                     {
                         "type": "string",
@@ -205,56 +208,6 @@
                 }
             }
         },
-        "/api/v1/newsletters/{newsletter_public_id}/subscriptions/{email}": {
-            "delete": {
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "public subscription"
-                ],
-                "summary": "UnsubscribeNewsletter - used to unsubscribe from newsletter by email",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "default": "application/json",
-                        "description": "application/json",
-                        "name": "Content-Type",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Public newsletter identifier",
-                        "name": "newsletter_public_id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "default": "test@test.com",
-                        "description": "Subscriber email address",
-                        "name": "email",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Successfully unsubscribed from newsletter"
-                    },
-                    "400": {
-                        "description": "Invalid request with detail",
-                        "schema": {
-                            "$ref": "#/definitions/response.Error"
-                        }
-                    },
-                    "500": {
-                        "description": "Unexpected exception"
-                    }
-                }
-            }
-        },
         "/api/v1/newsletters/{public_id}": {
             "get": {
                 "produces": [
@@ -263,7 +216,7 @@
                 "tags": [
                     "public newsletter"
                 ],
-                "summary": "GetNewsletterByUserID - retrieve newsletter by its public ID",
+                "summary": "Retrieve newsletter by its public ID",
                 "parameters": [
                     {
                         "type": "string",
@@ -302,13 +255,16 @@
         },
         "/api/v1/subscriptions/{email}/newsletters": {
             "get": {
+                "consumes": [
+                    "application/json"
+                ],
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "public subscription"
                 ],
-                "summary": "GetNewslettersBySubscriptionEmail - retrieve newsletter by subscriber's email",
+                "summary": "Retrieve newsletter by subscriber's email",
                 "parameters": [
                     {
                         "type": "string",
@@ -361,6 +317,58 @@
                 }
             }
         },
+        "/api/v1/unsubscribe": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "public subscription"
+                ],
+                "summary": "Used to unsubscribe from newsletter by email",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "default": "application/json",
+                        "description": "application/json",
+                        "name": "Content-Type",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Public newsletter identifier",
+                        "name": "newsletter_public_id",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Token to associate with subscription",
+                        "name": "token",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successfully unsubscribed from newsletter"
+                    },
+                    "400": {
+                        "description": "Invalid request with detail",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Unexpected exception"
+                    }
+                }
+            }
+        },
         "/api/v1/users/login": {
             "post": {
                 "produces": [
@@ -369,7 +377,7 @@
                 "tags": [
                     "public user"
                 ],
-                "summary": "Login - Login user",
+                "summary": "Login user, returning token for authorization",
                 "parameters": [
                     {
                         "description": "Data for user login",
@@ -411,7 +419,7 @@
                 "tags": [
                     "public user"
                 ],
-                "summary": "Register - Register user",
+                "summary": "Register user, returning token for authorization",
                 "parameters": [
                     {
                         "description": "Data for registering user",
