# internal/application/handler/unsubscribe_newsletter.go
@@ -3,6 +3,7 @@ package handler
 import (
 	"context"
 
+	"github.com/javor454/newsletter-assignment/internal/application"
 	"github.com/javor454/newsletter-assignment/internal/domain"
 )
 
@@ -10,18 +11,34 @@ type UnsubscribeNewsletterRepository interface {
 	Unsubscribe(ctx context.Context, email *domain.Email, newsletterPublicID *domain.ID) error
 }
 
+type TokenParser interface {
+	ParseToken(tokenStr string) (string, error)
+}
+
+type SubscriptionCache interface {
+	RemoveSubscribedNewsletter(ctx context.Context, email *domain.Email, newsletterPublicID *domain.ID) error
+}
+
 type UnsubscribeNewsletterHandler struct {
 	unsubscribeNewsletter UnsubscribeNewsletterRepository
+	tokenParser           TokenParser
+	subscriptionCache     SubscriptionCache
 }
 
 func NewUnsubscribeNewsletterHandler(
 	unr UnsubscribeNewsletterRepository,
+	tp TokenParser,
+	sc SubscriptionCache,
 ) *UnsubscribeNewsletterHandler {
-	return &UnsubscribeNewsletterHandler{unsubscribeNewsletter: unr}
+	return &UnsubscribeNewsletterHandler{unsubscribeNewsletter: unr, tokenParser: tp, subscriptionCache: sc}
 }
 
-func (r *UnsubscribeNewsletterHandler) Handle(ctx context.Context, newsletterPublicID, email string) error {
-	emailVo, err := domain.NewEmail(email)
+func (r *UnsubscribeNewsletterHandler) Handle(ctx context.Context, newsletterPublicID, token string) error {
+	parsed, err := r.tokenParser.ParseToken(token)
+	if err != nil {
+		return application.InvalidTokenError
+	}
+	emailVo, err := domain.NewEmail(parsed)
 	if err != nil {
 		return err
 	}
@@ -31,6 +48,10 @@ func (r *UnsubscribeNewsletterHandler) Handle(ctx context.Context, newsletterPub
 	}
 
 	if err := r.unsubscribeNewsletter.Unsubscribe(ctx, emailVo, pubID); err != nil {
+		return err
+	}
+
+	if err := r.subscriptionCache.RemoveSubscribedNewsletter(ctx, emailVo, pubID); err != nil {
 		return err
 	}
 
